<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRoomActivity">

    <RadioGroup
        android:id="@+id/serversRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/flashphonerRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flashphoner_radio"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <RadioButton
            android:id="@+id/trueconfRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trueconf_radio"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    </RadioGroup>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/serverURLAddressTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:inputType="textUri"
        android:hint="@string/server_hostname"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serversRadioGroup"
        app:met_floatingLabel="highlight" />


    <TextView
        android:id="@+id/connectFlashponerToServerStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/connection_status_flashphoner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverURLAddressTextInput" />

    <TextView
        android:id="@+id/connectTrueConfToServerStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/connection_status_trueconf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectFlashponerToServerStatusText" />

    <Button
        android:id="@+id/connectToServerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/connect_to_server_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverURLAddressTextInput" />


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/roomIdTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:inputType="text"
        android:hint="@string/room_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectToServerButton" />

    <Button
        android:id="@+id/enterRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/join_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roomIdTextInput"/>


</android.support.constraint.ConstraintLayout>